[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Other/GUI_Controller.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Other/Pause.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Other/PausePresed.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Other/PauseHovered.png" type="Texture" id=4]
[ext_resource path="res://Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 200
outline_size = 5
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="GUI_Controller" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause" type="TextureButton" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 631.0
margin_bottom = 631.0
rect_scale = Vector2( 0.08, 0.08 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Exit" type="Button" parent="CanvasLayer"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Exit"

[node name="Save" type="Button" parent="CanvasLayer"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Save"

[node name="Main_Menu" type="Button" parent="CanvasLayer"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="Resume" type="Button" parent="CanvasLayer"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Resume"

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer"]

[node name="Coins" type="Label" parent="CanvasLayer"]
margin_left = 1830.0
margin_top = 25.0
margin_right = 1870.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 5 )

[node name="FPSCounter" type="Label" parent="CanvasLayer"]
margin_left = 1830.0
margin_top = 5.0
margin_right = 1870.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 6 )

[node name="Retry" type="Button" parent="CanvasLayer"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 7 )
text = "Retry"

[node name="Game_Over" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 8 )
text = "Game Over"
[connection signal="button_down" from="CanvasLayer/Pause" to="." method="_on_Pause_button_down"]
[connection signal="button_up" from="CanvasLayer/Pause" to="." method="_on_Pause_button_up"]
[connection signal="pressed" from="CanvasLayer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="button_up" from="CanvasLayer/Exit" to="." method="_on_Exit_button_up"]
[connection signal="button_up" from="CanvasLayer/Save" to="." method="_on_Save_button_up"]
[connection signal="button_up" from="CanvasLayer/Main_Menu" to="." method="_on_Main_Menu_button_up"]
[connection signal="button_up" from="CanvasLayer/Resume" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="CanvasLayer/Retry" to="." method="_on_Retry_button_up"]
